unpackaged/objects/Coaching_Feedback_Report__c.object
<CustomObject>
  <description>Used to capture and track co-travels and meetings reports</description>
  <fields>
    <fullName>Count_Of_Attachments__c</fullName>
    <label>Count Of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Date_of_Meeting__c</fullName>
    <label>Date of Meeting</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Coaching/Co-Travel</fullName>
        </value>
        <value>
          <fullName>Planning Meeting</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaching_Feedback_Reports1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaching_Feedback_Reports</relationshipName>
    <type>Lookup</type>
  </fields>
  <label>Coaching/Feedback Report</label>
  <nameField>
    <label>Coaching/Feedback Report Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Coaching/Feedback Reports</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>